Bug 870739 - Polishing multi-resolution support   * Progress bars issues resolved   * Extra space at bottom dialer tab removed   * Video app scaling issues fixed   * Missing bluetooth phone/pda icon fixed   * Network activity icons now scale up correctly   * Lockscreen unlock icon re-do (it was bigger than normal)   * Re-ordered responsive.css file to avoid having impact in application first paint   * style_unstable/scrolling.css now supports different devices ratio   * Contacts scrolling @2x icons fix   * Added missed @2x assets

--- a/apps/settings/style/icons.css
+++ b/apps/settings/style/icons.css
@@ -310,8 +310,8 @@ aside.connecting {
   background-position: -24rem -3rem;
 }
 
-.bluetooth-type-pda,
-.bluetooth-type-phone {
+.bluetooth-type-pda:before,
+.bluetooth-type-phone:before {
   background-position: -27rem -3rem;
 }
 
